--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
     mongo:
         build: .
+        container_name: mongo
         environment:
             - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
             - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
@@ -12,10 +13,11 @@ services:
         env_file: 
             - .env
         volumes:
-            - ./mongodata:/data/db
+            - ./mongodata:/data
             - ./pipelines:/pipelines
     mongo-express:
         image: mongo-express
+        container_name: mongo_express
         environment:
             - ME_CONFIG_MONGODB_SERVER=mongo
             - ME_CONFIG_MONGODB_PORT=27017
@@ -26,6 +28,6 @@ services:
             - ME_CONFIG_BASICAUTH_USERNAME=${MONGOEXPRESS_LOGIN}
             - ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
         depends_on:
-            - mongo
+            - "mongo"
         ports:
             - "8081:8081"
